[gd_scene load_steps=9 format=2]

[ext_resource path="res://Resources/Environment/Tiles/Door_closed.png" type="Texture" id=1]
[ext_resource path="res://Resources/Environment/Tiles/Door_op1.png" type="Texture" id=2]
[ext_resource path="res://Resources/Environment/Tiles/Door_open.png" type="Texture" id=3]
[ext_resource path="res://Resources/Environment/Tiles/Door_op0.png" type="Texture" id=4]
[ext_resource path="res://Props/LevelDoor.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": false,
"name": "openning",
"speed": 8.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "closed",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 46.3897

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 37, 10 )

[node name="LevelDoor" type="Node2D"]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "closed"
playing = true

[node name="DoorBody" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorBody"]
position = Vector2( 0, 50 )
shape = SubResource( 2 )

[node name="Activation" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Activation"]
position = Vector2( 0, 6 )
shape = SubResource( 3 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Activation" to="." method="_on_Activation_body_entered"]
